--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Communication
 url=https://github.com/Berg0162/BluefruitSteeringServer
 architectures=nrf52
 includes=BluefruitSteeringServer.h
-depends=Adafruit_BluefruitLE_nRF51
+depends=Adafruit Bluefruit nRF52 Libraries
